--- a/package.json
+++ b/package.json
@@ -2,15 +2,16 @@
 	"name": "next quiz",
 	"author": "sanko",
 	"version": "1.0.0",
+	"type": "module",
 	"scripts": {
-		"dev": "next dev",
-		"build": "next build",
-		"start": "next start",
-		"lint": "next lint"
+		"dev": "vite dev",
+		"build": "vite build",
+		"preview": "vite preview"
 	},
-	"dependencies": {
-		"next": "^14.0.4",
-		"react": "^18.2.0",
-		"react-dom": "^18.2.0"
+	"devDependencies": {
+		"@sveltejs/adapter-node": "^2.0.0",
+		"@sveltejs/kit": "^2.0.0",
+		"svelte": "^4.2.8",
+		"vite": "^5.0.9"
 	}
 }
